// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNavGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiCollapsibleNavGroup testClass1 testClass2 emotion-euiCollapsibleNavGroup-notCollapsible-none-euiTestCss"
  data-test-subj="test subject string"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup props background dark is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup css-vz0z-euiCollapsibleNavGroup-notCollapsible-dark-euiColorMode-dark"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup props background light is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-light"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup props background none is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup props iconProps renders data-test-subj 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          data-euiicon-type="bolt"
          data-test-subj="DTS"
        />
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <h3
          class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props iconSize is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          data-euiicon-type="bolt"
        />
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <h3
          class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props iconType is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          data-euiicon-type="bolt"
        />
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <h3
          class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props title is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <h3
          class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
          id="id__title"
        >
          Title
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props titleElement can change the rendered element to h2 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__heading"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <h2
          class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
          id="id__title"
        >
          Title
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup props titleSize can be larger 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup throws a warning if iconType is passed without a title 1`] = `
<div
  class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
  id="id"
/>
`;

exports[`EuiCollapsibleNavGroup when isCollapsible is true accepts accordion props 1`] = `
<div
  aria-label="aria-label"
  class="euiAccordion euiCollapsibleNavGroup testClass1 testClass2 emotion-euiAccordion-euiCollapsibleNavGroup-isCollapsible-none-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      aria-label="aria-label"
      class="euiAccordion__button euiCollapsibleNavGroup__heading testClass1 testClass2 emotion-euiAccordion__button-euiTestCss"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
          >
            <h3
              class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
              id="id__title"
            >
              Title
            </h3>
          </div>
        </div>
      </span>
    </button>
    <button
      aria-controls="id"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="id"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;

exports[`EuiCollapsibleNavGroup when isCollapsible is true will render an accordion 1`] = `
<div
  class="euiAccordion euiCollapsibleNavGroup emotion-euiAccordion-euiCollapsibleNavGroup-isCollapsible-none"
>
  <div
    class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
          >
            <h3
              class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
              id="id__title"
            >
              Title
            </h3>
          </div>
        </div>
      </span>
    </button>
    <button
      aria-controls="id"
      aria-expanded="false"
      aria-hidden="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isClosed"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
    id="id"
    inert=""
    role="group"
    style="block-size: 0;"
  >
    <div
      class="euiAccordion__children emotion-euiAccordion__children"
    />
  </div>
</div>
`;
